--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "headless-sqs",
-  "version": "0.1.0",
+  "version": "dev",
   "description": "Headless SQS package creates queues if do not exist with a sample configuration.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
