--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "typescript": "^5.1.3"
   },
   "dependencies": {
-    "@aws-sdk/client-sqs": "^3.354.0"
+    "@aws-sdk/client-sqs": "^3.354.0",
+    "sqs-consumer": "^7.1.0"
   }
 }
